Страница Товар - основные стили 1го экрана (без grid сетки)

--- a/product.html
+++ b/product.html
@@ -146,7 +146,6 @@
             <img class="product__gallery__preview__image" src="../images/demo/product/product-priview.jpg" />
             <img class="product__gallery__preview__image" src="../images/demo/product/product-priview.jpg" />
             <img class="product__gallery__preview__image" src="../images/demo/product/product-priview.jpg" />
-            <img class="product__gallery__preview__image" src="../images/demo/product/product-priview.jpg" />
             <span class="product__gallery__preview__down"></span>
           </div>
           <img class="product__gallery__image" src="../images/demo/product/product-main.jpg" />
@@ -155,24 +154,24 @@
           <div class="product__options__option">
             <span class="product__options__option__name">Цвет:</span>
             <div class="product__options__option__values">
-              <span class="product__options__option__values__color option__color--belyi"></span>
+              <a class="product__options__option__values__color option__color--belyi" href="#"></a>
               <span class="product__options__option__values__color option__color--bezhevyi product__options__option__values__color--active"></span>
-              <span class="product__options__option__values__color option__color--seryi"></span>
-              <span class="product__options__option__values__color option__color--zelenyi"></span>
+              <a class="product__options__option__values__color option__color--seryi" href="#"></a>
+              <a class="product__options__option__values__color option__color--zelenyi" href="#"></a>
             </div>
           </div>
           <div class="product__options__option">
             <span class="product__options__option__name">Память:</span>
             <div class="product__options__option__values">
-              <span class="product__options__option__values__value">256</span>
+              <a class="product__options__option__values__value" href="#">256</a>
               <span class="product__options__option__values__value product__options__option__values__value--active">512</span>
-              <span class="product__options__option__values__value">1024</span>
+              <a class="product__options__option__values__value" href="#">1024</a>
             </div>
           </div>
           <div class="product__options__option">
             <span class="product__options__option__name">Поддержка SIM карт:</span>
             <div class="product__options__option__values">
-              <span class="product__options__option__values__value">2 nano-SIM</span>
+              <a class="product__options__option__values__value" href="#">2 nano-SIM</a>
               <span class="product__options__option__values__value product__options__option__values__value--active">1 nano-SIM + 1 eSIM</span>
             </div>
           </div>
@@ -214,8 +213,10 @@
             <span class="product__buy__prices__old">667 000 ₽</span>
           </div>
           <span class="product__buy__add_to_cart button button--pink">Добавить в корзину</span>
-          <span class="product__buy__order button button--white">Заказать в 1 клик</span>
-          <span class="product__buy__favourites"></span>
+          <div class="product__buy__row2_buttons">
+            <span class="product__buy__row2_buttons__order button button--white">Заказать в 1 клик</span>
+            <span class="product__buy__row2_buttons__favourites"></span>
+          </div>
         </div>
         <div class="product__delivery">
           <div class="product__delivery__location">
