Страница Товар - grid сетка для desktop Доделать: Promo

--- a/product.html
+++ b/product.html
@@ -125,7 +125,7 @@
           </li>
         </ul>
       </section>
-      <section class="product">
+      <section class="product section wrapper--global">
         <h1 class="product__heading">Смартфон Apple iPhone 14 Plus, 512 ГБ, «Cияющая звезда»</h1>
         <div class="product__helpers">
           <span class="product__helpers__id">Код товара: 01908</span>
@@ -175,37 +175,37 @@
               <span class="product__options__option__values__value product__options__option__values__value--active">1 nano-SIM + 1 eSIM</span>
             </div>
           </div>
-        </div>
-        <div class="product__summary">
-          <span class="product__summary__heading">Характеристики:</span>
-          <ul class="product__summary__list">
-            <li class="product__summary__list__item">
-              <span class="product__summary__list__item__name">Артикул</span>
-              <span class="product__summary__list__item__dots"></span>
-              <span class="product__summary__list__item__value">MQ5D3</span>
-            </li>
-            <li class="product__summary__list__item">
-              <span class="product__summary__list__item__name">Бренд</span>
-              <span class="product__summary__list__item__dots"></span>
-              <span class="product__summary__list__item__value">Apple</span>
-            </li>
-            <li class="product__summary__list__item">
-              <span class="product__summary__list__item__name">Цвет</span>
-              <span class="product__summary__list__item__dots"></span>
-              <span class="product__summary__list__item__value">Серебристый</span>
-            </li>
-            <li class="product__summary__list__item">
-              <span class="product__summary__list__item__name">Объем накопителя</span>
-              <span class="product__summary__list__item__dots"></span>
-              <span class="product__summary__list__item__value">512 Гб</span>
-            </li>
-            <li class="product__summary__list__item">
-              <span class="product__summary__list__item__name">Год релиза</span>
-              <span class="product__summary__list__item__dots"></span>
-              <span class="product__summary__list__item__value">2022</span>
-            </li>
-          </ul>
-          <a class="product__summary__more" href="#">Все характеристики</a>
+          <div class="product__options__summary">
+            <span class="product__options__summary__heading">Характеристики:</span>
+            <ul class="product__options__summary__list">
+              <li class="product__options__summary__list__item">
+                <span class="product__options__summary__list__item__name">Артикул</span>
+                <span class="product__options__summary__list__item__dots"></span>
+                <span class="product__options__summary__list__item__value">MQ5D3</span>
+              </li>
+              <li class="product__options__summary__list__item">
+                <span class="product__options__summary__list__item__name">Бренд</span>
+                <span class="product__options__summary__list__item__dots"></span>
+                <span class="product__options__summary__list__item__value">Apple</span>
+              </li>
+              <li class="product__options__summary__list__item">
+                <span class="product__options__summary__list__item__name">Цвет</span>
+                <span class="product__options__summary__list__item__dots"></span>
+                <span class="product__options__summary__list__item__value">Серебристый</span>
+              </li>
+              <li class="product__options__summary__list__item">
+                <span class="product__options__summary__list__item__name">Объем накопителя</span>
+                <span class="product__options__summary__list__item__dots"></span>
+                <span class="product__options__summary__list__item__value">512 Гб</span>
+              </li>
+              <li class="product__options__summary__list__item">
+                <span class="product__options__summary__list__item__name">Год релиза</span>
+                <span class="product__options__summary__list__item__dots"></span>
+                <span class="product__options__summary__list__item__value">2022</span>
+              </li>
+            </ul>
+            <a class="product__options__summary__more" href="#">Все характеристики</a>
+          </div>
         </div>
         <div class="product__buy">
           <div class="product__buy__prices">
@@ -217,23 +217,23 @@
             <span class="product__buy__row2_buttons__order button button--white">Заказать в 1 клик</span>
             <span class="product__buy__row2_buttons__favourites"></span>
           </div>
-        </div>
-        <div class="product__delivery">
-          <div class="product__delivery__location">
-            Наличие и доставка в г. 
-            <span class="product__delivery__location__city">Санкт-Петербург</span>
+          <div class="product__buy__delivery">
+            <div class="product__buy__delivery__location">
+              Наличие и доставка в г. 
+              <span class="product__buy__delivery__location__city">Санкт-Петербург</span>
+            </div>
+            <ul class="product__buy__delivery__options">
+              <li class="product__buy__delivery__options__option">
+                <span class="product__buy__delivery__options__option__heading">Самовывоз - бесплатно</span>
+                <span class="product__buy__delivery__options__option__info">Метро Площадь Восстания, ул. 1-я Советская, 6к2</span>
+                <a class="product__buy__delivery__options__option__link" href="#">Подробнее о пункте выдачи</a>
+              </li>
+              <li class="product__buy__delivery__options__option">
+                <span class="product__buy__delivery__options__option__heading">Достава курьером (1-2 дня) - 200 ₽</span>
+                <span class="product__buy__delivery__options__option__info">До двери</span>
+              </li>
+            </ul>
           </div>
-          <ul class="product__delivery__options">
-            <li class="product__delivery__options__option">
-              <span class="product__delivery__options__option__heading">Самовывоз - бесплатно</span>
-              <span class="product__delivery__options__option__info">Метро Площадь Восстания, ул. 1-я Советская, 6к2</span>
-              <a class="product__delivery__options__option__link" href="#">Подробнее о пункте выдачи</a>
-            </li>
-            <li class="product__delivery__options__option">
-              <span class="product__delivery__options__option__heading">Достава курьером (1-2 дня) - 200 ₽</span>
-              <span class="product__delivery__options__option__info">До двери</span>
-            </li>
-          </ul>
         </div>
         <div class="product__tabs">
           <span class="product__tabs__tab product__tabs__tab--active">Описание</span>
@@ -245,7 +245,7 @@
             <span class="product__promo__hero__heading">Ощути настоящую силу игр</span>
             <span class="product__promo__hero__text">Фантастически мощный восьмиядерный процессор в паре с SSD накопителем обеспечивают высокую производительность и быстрый запуск приложений и значительно повышают игровые возможности.</span>
             <span class="product__promo__hero__accent">Возьмись за приключения!</span>
-            <img class="product__promo__hero__image product__promo__hero__image--accent" src="../images/demo/product/hero-accent.png" />
+            <img class="product__promo__hero__image product__promo__hero__image--accent" src="../images/demo/product/hero-accent2.png" />
             <img class="product__promo__hero__image  product__promo__hero__image--background" src="../images/demo/product/hero-bg.png" />
           </div>
           <div class="product__promo__double">
@@ -282,17 +282,20 @@
             <div class="product__promo__tripple__item">
               <div class="product__promo__tripple__item__heading">Тактильная отдача</div>
               <div class="product__promo__tripple__item__text">Контроллер с динамическим сопротивлением спусковых кнопок и тактильной отдачей позволяет окунуться в игровой мир, откликаясь на взаимодействия пользователя с объектами и развивающиеся события в игре.</div>
-              <img class="product__promo__tripple__item__image" src="../images/demo/product/tripple-left.jpg" />
+              <div class="product__promo__tripple__item__cover"></div>
+              <img class="product__promo__tripple__item__image" src="../images/demo/product/tripple-left.png" />
             </div>
             <div class="product__promo__tripple__item">
               <div class="product__promo__tripple__item__heading">Общайтесь с игроками</div>
               <div class="product__promo__tripple__item__text">Встроенный микрофон позволяет с легкостью начать разговор. Если необходимо сосредоточиться на игре, достаточно нажать специальную кнопку и микрофон выключится.</div>
-              <img class="product__promo__tripple__item__image" src="../images/demo/product/tripple-middle.jpg" />
+              <div class="product__promo__tripple__item__cover"></div>
+              <img class="product__promo__tripple__item__image" src="../images/demo/product/tripple-middle.png" />
             </div>
             <div class="product__promo__tripple__item">
               <div class="product__promo__tripple__item__heading">Создавайте моменты и делитесь ими</div>
               <div class="product__promo__tripple__item__text">Создавайте незабываемые моменты, сохраняйте и делитесь ими благодаря PlayStation Network.</div>
-              <img class="product__promo__tripple__item__image" src="../images/demo/product/tripple-right.jpg" />
+              <div class="product__promo__tripple__item__cover"></div>
+              <img class="product__promo__tripple__item__image" src="../images/demo/product/tripple-right.png" />
             </div>
           </div>
           <div class="product__promo__text-n-img">
@@ -305,12 +308,19 @@
           <div class="product__promo__text-n-img">
             <img class="product__promo__text-n-img__image" src="../images/demo/product/tni-left.png" />
             <div class="product__promo__text-n-img__text">
-              <span class="product__promo__text-n-img__text__heading">Sony PlayStation 5</span>
-              <span class="product__promo__text-n-img__text__details">
                 <ul class="product__promo__text-n-img__text__details__list">
-                  <li class="product__promo__text-n-img__text__details__list__item">Геймпад Sony DualSense</li>
-                  <li class="product__promo__text-n-img__text__details__list__item">Кабель HDMI, кабель питания, кабель USB-C — USB для зарядки контроллера</li>
-                  <li class="product__promo__text-n-img__text__details__list__item">Подставка для горизонтального расположения</li>
+                  <li class="product__promo__text-n-img__text__details__list__item">
+                    <span class="product__promo__text-n-img__text__details__list__item__heading">Sony PlayStation 5</span>
+                  </li>
+                  <li class="product__promo__text-n-img__text__details__list__item">
+                    <span class="product__promo__text-n-img__text__details__list__item__text">Геймпад Sony DualSense</span>
+                  </li>
+                  <li class="product__promo__text-n-img__text__details__list__item">
+                    <span class="product__promo__text-n-img__text__details__list__item__text">Кабель HDMI, кабель питания, кабель USB-C — USB для зарядки контроллера</span>
+                  </li>
+                  <li class="product__promo__text-n-img__text__details__list__item">
+                    <span class="product__promo__text-n-img__text__details__list__item__text">Подставка для горизонтального расположения</span>
+                  </li>
                 </ul>
               </span>
             </div>
