Страница Товар в наличии (мобильная и планшетная версии) Осталось: галерея, табы

--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Страница товара — ТехноЗум.рф</title>
+    <title>Страница товара — ТехноЗум.рф</title>
     <meta name="description" value="DESCRIPTION" />
     
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico"/>
@@ -149,6 +149,13 @@
             <span class="product__gallery__preview__down"></span>
           </div>
           <img class="product__gallery__image" src="../images/demo/product/product-main.jpg" />
+          <div class="product__gallery__dots hvr__dots">
+            <span class="product__gallery__dots__item hvr__dot hvr__dot--active"></span>
+            <span class="product__gallery__dots__item hvr__dot"></span>
+            <span class="product__gallery__dots__item hvr__dot"></span>
+            <span class="product__gallery__dots__item hvr__dot"></span>
+            <span class="product__gallery__dots__item hvr__dot"></span>
+          </div>
         </div>
         <div class="product__options">
           <div class="product__options__option">
@@ -245,7 +252,7 @@
             <span class="product__promo__hero__heading">Ощути настоящую силу игр</span>
             <span class="product__promo__hero__text">Фантастически мощный восьмиядерный процессор в паре с SSD накопителем обеспечивают высокую производительность и быстрый запуск приложений и значительно повышают игровые возможности.</span>
             <span class="product__promo__hero__accent">Возьмись за приключения!</span>
-            <img class="product__promo__hero__image product__promo__hero__image--accent" src="../images/demo/product/hero-accent2.png" />
+            <img class="product__promo__hero__image product__promo__hero__image--accent" src="../images/demo/product/hero-accent3.png" />
             <img class="product__promo__hero__image  product__promo__hero__image--background" src="../images/demo/product/hero-bg.png" />
           </div>
           <div class="product__promo__double">
@@ -305,24 +312,21 @@
             </div>
             <img class="product__promo__text-n-img__image" src="../images/demo/product/tni-right.png" />
           </div>
-          <div class="product__promo__text-n-img">
+          <div class="product__promo__text-n-img mobile--reverse">
             <img class="product__promo__text-n-img__image" src="../images/demo/product/tni-left.png" />
             <div class="product__promo__text-n-img__text">
-                <ul class="product__promo__text-n-img__text__details__list">
-                  <li class="product__promo__text-n-img__text__details__list__item">
-                    <span class="product__promo__text-n-img__text__details__list__item__heading">Sony PlayStation 5</span>
-                  </li>
-                  <li class="product__promo__text-n-img__text__details__list__item">
-                    <span class="product__promo__text-n-img__text__details__list__item__text">Геймпад Sony DualSense</span>
-                  </li>
-                  <li class="product__promo__text-n-img__text__details__list__item">
-                    <span class="product__promo__text-n-img__text__details__list__item__text">Кабель HDMI, кабель питания, кабель USB-C — USB для зарядки контроллера</span>
-                  </li>
-                  <li class="product__promo__text-n-img__text__details__list__item">
-                    <span class="product__promo__text-n-img__text__details__list__item__text">Подставка для горизонтального расположения</span>
-                  </li>
-                </ul>
-              </span>
+              <span class="product__promo__text-n-img__text__details__list__item__heading">Sony PlayStation 5</span>
+              <ul class="product__promo__text-n-img__text__details__list">
+                <li class="product__promo__text-n-img__text__details__list__item">
+                  <span class="product__promo__text-n-img__text__details__list__item__text">Геймпад Sony DualSense</span>
+                </li>
+                <li class="product__promo__text-n-img__text__details__list__item">
+                  <span class="product__promo__text-n-img__text__details__list__item__text">Кабель HDMI, кабель питания, кабель USB-C — USB для зарядки контроллера</span>
+                </li>
+                <li class="product__promo__text-n-img__text__details__list__item">
+                  <span class="product__promo__text-n-img__text__details__list__item__text">Подставка для горизонтального расположения</span>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
