--- a/product.html
+++ b/product.html
@@ -211,7 +211,7 @@
                 <span class="product__options__summary__list__item__value">2022</span>
               </li>
             </ul>
-            <a class="product__options__summary__more" href="#">Все характеристики</a>
+            <label class="product__options__summary__more" for="product__characteristics">Все характеристики</label>
           </div>
         </div>
         <div class="product__buy">
@@ -243,95 +243,108 @@
           </div>
         </div>
         <div class="product__tabs">
-          <span class="product__tabs__tab product__tabs__tab--active">Описание</span>
-          <span class="product__tabs__tab">Характеристики</span>
-          <span class="product__tabs__tab">Отзывы</span>
+          <input class="product__tabs__radio" id="product__promo" type="radio" name="product__tabs" checked="checked" />
+          <input class="product__tabs__radio" id="product__characteristics" type="radio" name="product__tabs" />
+          <input class="product__tabs__radio" id="product__reviews" type="radio" name="product__tabs" />
+          <ul class="product__tabs__list">
+            <li class="product__tabs__list__tab product__promo">
+              <label class="tabs_label" for="product__promo">Описание</label>
+            </li>
+            <li class="product__tabs__list__tab product__characteristics">
+              <label class="tabs_label" for="product__characteristics">Характеристики</label>
+            </li>
+            <li class="product__tabs__list__tab product__reviews">
+              <label class="tabs_label" for="product__reviews">Отзывы</label>
+            </li>
+          </ul>
+        <div class="product__tabs__content">
+          <div class="product__tabs__content__block product__promo">
+            <div class="product__promo__hero">
+              <span class="product__promo__hero__heading">Ощути настоящую силу игр</span>
+              <span class="product__promo__hero__text">Фантастически мощный восьмиядерный процессор в паре с SSD накопителем обеспечивают высокую производительность и быстрый запуск приложений и значительно повышают игровые возможности.</span>
+              <span class="product__promo__hero__accent">Возьмись за приключения!</span>
+              <img class="product__promo__hero__image product__promo__hero__image--accent" src="../images/demo/product/hero-accent.png" />
+              <img class="product__promo__hero__image  product__promo__hero__image--background" src="../images/demo/product/hero-bg.png" />
+            </div>
+            <div class="product__promo__double">
+              <div class="product__promo__double__item">
+                <div class="product__promo__double__item__heading">Молниеносная скорость</div>
+                <div class="product__promo__double__item__text">Новые возможности для творчества благодаря быстрой обработке данных</div>
+                <img class="product__promo__double__item__image" src="../images/demo/product/double-left.png" />
+              </div>
+              <div class="product__promo__double__item">
+                <div class="product__promo__double__item__heading">Полное погружение</div>
+                <div class="product__promo__double__item__text">Новые возможности для творчества благодаря быстрой обработке данных</div>
+                <img class="product__promo__double__item__image" src="../images/demo/product/double-right.png" />
+              </div>
+            </div>
+            <div class="product__promo__store">
+              <span class="product__promo__store__heading">Разнообразие игр</span>
+              <span class="product__promo__store__description">Большой выбор в магазине PlayStation Store</span>
+              <div class="product__promo__store__gallery">
+                <img class="product__promo__store__gallery__image" src="../images/demo/product/g1.jpg" />
+                <img class="product__promo__store__gallery__image" src="../images/demo/product/g2.jpg" />
+                <img class="product__promo__store__gallery__image" src="../images/demo/product/g3.jpg" />
+                <img class="product__promo__store__gallery__image" src="../images/demo/product/g4.jpg" />
+                <img class="product__promo__store__gallery__image" src="../images/demo/product/g5.jpg" />
+                <img class="product__promo__store__gallery__image" src="../images/demo/product/g6.jpg" />
+                <img class="product__promo__store__gallery__image" src="../images/demo/product/g7.jpg" />
+                <img class="product__promo__store__gallery__image" src="../images/demo/product/g8.jpg" />
+                <img class="product__promo__store__gallery__image" src="../images/demo/product/g9.jpg" />
+                <img class="product__promo__store__gallery__image" src="../images/demo/product/g10.jpg" />
+                <img class="product__promo__store__gallery__image" src="../images/demo/product/g11.jpg" />
+                <img class="product__promo__store__gallery__image" src="../images/demo/product/g12.jpg" />
+              </div>
+            </div>
+            <div class="product__promo__tripple">
+              <div class="product__promo__tripple__item">
+                <div class="product__promo__tripple__item__heading">Тактильная отдача</div>
+                <div class="product__promo__tripple__item__text">Контроллер с динамическим сопротивлением спусковых кнопок и тактильной отдачей позволяет окунуться в игровой мир, откликаясь на взаимодействия пользователя с объектами и развивающиеся события в игре.</div>
+                <div class="product__promo__tripple__item__cover"></div>
+                <img class="product__promo__tripple__item__image" src="../images/demo/product/tripple-left.png" />
+              </div>
+              <div class="product__promo__tripple__item">
+                <div class="product__promo__tripple__item__heading">Общайтесь с&nbsp;игроками</div>
+                <div class="product__promo__tripple__item__text">Встроенный микрофон позволяет с легкостью начать разговор. Если необходимо сосредоточиться на игре, достаточно нажать специальную кнопку и микрофон выключится.</div>
+                <div class="product__promo__tripple__item__cover"></div>
+                <img class="product__promo__tripple__item__image" src="../images/demo/product/tripple-middle.png" />
+              </div>
+              <div class="product__promo__tripple__item">
+                <div class="product__promo__tripple__item__heading">Создавайте моменты и&nbsp;делитесь&nbsp;ими</div>
+                <div class="product__promo__tripple__item__text">Создавайте незабываемые моменты, сохраняйте и делитесь ими благодаря PlayStation Network.</div>
+                <div class="product__promo__tripple__item__cover"></div>
+                <img class="product__promo__tripple__item__image" src="../images/demo/product/tripple-right.png" />
+              </div>
+            </div>
+            <div class="product__promo__text-n-img">
+              <div class="product__promo__text-n-img__text">
+                <span class="product__promo__text-n-img__text__heading">Создана для потрясающих визуальных эффектов</span>
+                <span class="product__promo__text-n-img__text__details">Максимально реалистичные тени и отражения в играх достигаются с помощью нового алгоритма вычисления световых лучей.</span>
+              </div>
+              <img class="product__promo__text-n-img__image" src="../images/demo/product/tni-right.png" />
+            </div>
+            <div class="product__promo__text-n-img mobile--reverse">
+              <img class="product__promo__text-n-img__image" src="../images/demo/product/tni-left.png" />
+              <div class="product__promo__text-n-img__text">
+                <span class="product__promo__text-n-img__text__details__list__item__heading">Sony PlayStation 5</span>
+                <ul class="product__promo__text-n-img__text__details__list">
+                  <li class="product__promo__text-n-img__text__details__list__item">
+                    <span class="product__promo__text-n-img__text__details__list__item__text">Геймпад Sony DualSense</span>
+                  </li>
+                  <li class="product__promo__text-n-img__text__details__list__item">
+                    <span class="product__promo__text-n-img__text__details__list__item__text">Кабель HDMI, кабель питания, кабель USB-C — USB для зарядки контроллера</span>
+                  </li>
+                  <li class="product__promo__text-n-img__text__details__list__item">
+                    <span class="product__promo__text-n-img__text__details__list__item__text">Подставка для горизонтального расположения</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="product__tabs__content__block product__characteristics">характеристики</div>
+          <div class="product__tabs__content__block product__reviews">Отзывы</div>
         </div>
-        <div class="product__promo">
-          <div class="product__promo__hero">
-            <span class="product__promo__hero__heading">Ощути настоящую силу игр</span>
-            <span class="product__promo__hero__text">Фантастически мощный восьмиядерный процессор в паре с SSD накопителем обеспечивают высокую производительность и быстрый запуск приложений и значительно повышают игровые возможности.</span>
-            <span class="product__promo__hero__accent">Возьмись за приключения!</span>
-            <img class="product__promo__hero__image product__promo__hero__image--accent" src="../images/demo/product/hero-accent.png" />
-            <img class="product__promo__hero__image  product__promo__hero__image--background" src="../images/demo/product/hero-bg.png" />
-          </div>
-          <div class="product__promo__double">
-            <div class="product__promo__double__item">
-              <div class="product__promo__double__item__heading">Молниеносная скорость</div>
-              <div class="product__promo__double__item__text">Новые возможности для творчества благодаря быстрой обработке данных</div>
-              <img class="product__promo__double__item__image" src="../images/demo/product/double-left.png" />
-            </div>
-            <div class="product__promo__double__item">
-              <div class="product__promo__double__item__heading">Полное погружение</div>
-              <div class="product__promo__double__item__text">Новые возможности для творчества благодаря быстрой обработке данных</div>
-              <img class="product__promo__double__item__image" src="../images/demo/product/double-right.png" />
-            </div>
-          </div>
-          <div class="product__promo__store">
-            <span class="product__promo__store__heading">Разнообразие игр</span>
-            <span class="product__promo__store__description">Большой выбор в магазине PlayStation Store</span>
-            <div class="product__promo__store__gallery">
-              <img class="product__promo__store__gallery__image" src="../images/demo/product/g1.jpg" />
-              <img class="product__promo__store__gallery__image" src="../images/demo/product/g2.jpg" />
-              <img class="product__promo__store__gallery__image" src="../images/demo/product/g3.jpg" />
-              <img class="product__promo__store__gallery__image" src="../images/demo/product/g4.jpg" />
-              <img class="product__promo__store__gallery__image" src="../images/demo/product/g5.jpg" />
-              <img class="product__promo__store__gallery__image" src="../images/demo/product/g6.jpg" />
-              <img class="product__promo__store__gallery__image" src="../images/demo/product/g7.jpg" />
-              <img class="product__promo__store__gallery__image" src="../images/demo/product/g8.jpg" />
-              <img class="product__promo__store__gallery__image" src="../images/demo/product/g9.jpg" />
-              <img class="product__promo__store__gallery__image" src="../images/demo/product/g10.jpg" />
-              <img class="product__promo__store__gallery__image" src="../images/demo/product/g11.jpg" />
-              <img class="product__promo__store__gallery__image" src="../images/demo/product/g12.jpg" />
-            </div>
-          </div>
-          <div class="product__promo__tripple">
-            <div class="product__promo__tripple__item">
-              <div class="product__promo__tripple__item__heading">Тактильная отдача</div>
-              <div class="product__promo__tripple__item__text">Контроллер с динамическим сопротивлением спусковых кнопок и тактильной отдачей позволяет окунуться в игровой мир, откликаясь на взаимодействия пользователя с объектами и развивающиеся события в игре.</div>
-              <div class="product__promo__tripple__item__cover"></div>
-              <img class="product__promo__tripple__item__image" src="../images/demo/product/tripple-left.png" />
-            </div>
-            <div class="product__promo__tripple__item">
-              <div class="product__promo__tripple__item__heading">Общайтесь с игроками</div>
-              <div class="product__promo__tripple__item__text">Встроенный микрофон позволяет с легкостью начать разговор. Если необходимо сосредоточиться на игре, достаточно нажать специальную кнопку и микрофон выключится.</div>
-              <div class="product__promo__tripple__item__cover"></div>
-              <img class="product__promo__tripple__item__image" src="../images/demo/product/tripple-middle.png" />
-            </div>
-            <div class="product__promo__tripple__item">
-              <div class="product__promo__tripple__item__heading">Создавайте моменты и делитесь ими</div>
-              <div class="product__promo__tripple__item__text">Создавайте незабываемые моменты, сохраняйте и делитесь ими благодаря PlayStation Network.</div>
-              <div class="product__promo__tripple__item__cover"></div>
-              <img class="product__promo__tripple__item__image" src="../images/demo/product/tripple-right.png" />
-            </div>
-          </div>
-          <div class="product__promo__text-n-img">
-            <div class="product__promo__text-n-img__text">
-              <span class="product__promo__text-n-img__text__heading">Создана для потрясающих визуальных эффектов</span>
-              <span class="product__promo__text-n-img__text__details">Максимально реалистичные тени и отражения в играх достигаются с помощью нового алгоритма вычисления световых лучей.</span>
-            </div>
-            <img class="product__promo__text-n-img__image" src="../images/demo/product/tni-right.png" />
-          </div>
-          <div class="product__promo__text-n-img mobile--reverse">
-            <img class="product__promo__text-n-img__image" src="../images/demo/product/tni-left.png" />
-            <div class="product__promo__text-n-img__text">
-              <span class="product__promo__text-n-img__text__details__list__item__heading">Sony PlayStation 5</span>
-              <ul class="product__promo__text-n-img__text__details__list">
-                <li class="product__promo__text-n-img__text__details__list__item">
-                  <span class="product__promo__text-n-img__text__details__list__item__text">Геймпад Sony DualSense</span>
-                </li>
-                <li class="product__promo__text-n-img__text__details__list__item">
-                  <span class="product__promo__text-n-img__text__details__list__item__text">Кабель HDMI, кабель питания, кабель USB-C — USB для зарядки контроллера</span>
-                </li>
-                <li class="product__promo__text-n-img__text__details__list__item">
-                  <span class="product__promo__text-n-img__text__details__list__item__text">Подставка для горизонтального расположения</span>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="product__characteristics"></div>
-        <div class="product__reviews"></div>
+      </div>
       </section>
       <section class="suggestions">
         <div class="suggestions__container section wrapper--global">
