Страница Товар - вкладка Характеристики

--- a/product.html
+++ b/product.html
@@ -258,7 +258,7 @@
             </li>
           </ul>
         <div class="product__tabs__content">
-          <div class="product__tabs__content__block product__promo">
+          <div class="product__tabs__content__block product__tabs__content__block--promo product__promo">
             <div class="product__promo__hero">
               <span class="product__promo__hero__heading">Ощути настоящую силу игр</span>
               <span class="product__promo__hero__text">Фантастически мощный восьмиядерный процессор в паре с SSD накопителем обеспечивают высокую производительность и быстрый запуск приложений и значительно повышают игровые возможности.</span>
@@ -341,7 +341,200 @@
               </div>
             </div>
           </div>
-          <div class="product__tabs__content__block product__characteristics">характеристики</div>
+          <div class="product__tabs__content__block product__tabs__content__block--characteristics product__characteristics">
+            <div class="product__tabs__content__block__characteristics_group">
+              <span class="product__tabs__content__block__characteristics_group__heading">Основные характеристики</span>
+              <ul class="product__tabs__content__block__characteristics_group__list">
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Артикул</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">MQ5D3</span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Бренд</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">Apple</span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Цвет</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">Серебристый</span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Объем накопителя</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">512 Гб</span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Год релиза</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">2022</span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Модель</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">iPhone 14 Plus</span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">SIM-карта</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">SIM + eSIM</span>
+                </li>
+              </ul>
+            </div>
+            <div class="product__tabs__content__block__characteristics_group">
+              <span class="product__tabs__content__block__characteristics_group__heading">Размеры</span>
+              <ul class="product__tabs__content__block__characteristics_group__list">
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Длина, мм</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">150</span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Ширина, мм</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">110</span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Высота, мм</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">12</span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Вес, гр</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">300</span>
+                </li>
+              </ul>
+            </div>
+            <div class="product__tabs__content__block__characteristics_group">
+              <span class="product__tabs__content__block__characteristics_group__heading">Процессор</span>
+              <ul class="product__tabs__content__block__characteristics_group__list">
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Процессор</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">A15 Bionic</span>
+                </li>
+              </ul>
+            </div>
+            <div class="product__tabs__content__block__characteristics_group">
+              <span class="product__tabs__content__block__characteristics_group__heading">Дисплей</span>
+              <ul class="product__tabs__content__block__characteristics_group__list">
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Дисплей</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">2778x1284</span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Яркость</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">1200 кд/м²</span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Плотность пикселей на дюйм</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">458 пикс/дюйм</span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Диагональ</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">6,7"</span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Тип дисплея</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">OLED Super Retina XDR</span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Контрастность</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">2000000:1</span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Технологии</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">True Tone</span>
+                </li>
+              </ul>
+            </div>
+            <div class="product__tabs__content__block__characteristics_group">
+              <span class="product__tabs__content__block__characteristics_group__heading">Камера</span>
+              <ul class="product__tabs__content__block__characteristics_group__list">
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Разрешение камеры</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">12 Мп</span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Функции камеры</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">
+                    <ul>
+                      <li>вспышка True Tone</li>
+                      <li>режим «Портрет» с улучшенным эффектом боке и функцией «Глубина»</li>
+                      <li>автоматическая стабилизация изображения</li>
+                      <li>автофокус</li>
+                      <li>функция Smart HDR 4</li>
+                      <li>ночной режим</li>
+                      <li>серийная съëмка</li>
+                      <li>панорамная съёмка</li>
+                      <li>серийная съëмка</li>
+                      <li>привязка фотографий к месту съёмки</li>
+                      <li>портретное освещение</li>
+                      <li>коррекция искажений объектива</li>
+                      <li>технология Deep Fusion</li>
+                      <li>форматы изображений: HEIF и JPEG</li>
+                      <li>широкий цветовой диапазон для фотографий и Live Photos</li>
+                      <li>фотографические стили</li>
+                      <li>технология Photonic Engine</li>
+                      <li>передовая система устранения эффекта красных глаз</li>
+                    </ul>
+                  </span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Количество линз</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">пятилинзовый, семилинзовый</span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Функции камеры</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">
+                    <ul>
+                      <li>4K с частотой 24, 25, 30 или 60 кадров/с</li>
+                      <li>HD-видео 1080p с частотой 25, 30 или 60 кадров/с</li>
+                      <li>HD-видео 720p с частотой 30 кадров/с</li>
+                    </ul>
+                  </span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Разрешение видео</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">оптическая</span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Стабилизация изображения</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">OLED Super Retina XDR</span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Защита объектива</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">сапфировое стекло</span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Объектив</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">основной, сверхширокоугольный</span>
+                </li>
+                <li class="product__tabs__content__block__characteristics_group__list__item">
+                  <span class="product__tabs__content__block__characteristics_group__list__item__name">Диафрагма</span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__dots"></span>
+                  <span class="product__tabs__content__block__characteristics_group__list__item__value">ƒ/1.5 (основная), ƒ/2.4 (сверхширокоугольная)</span>
+                </li>
+              </ul>
+            </div>
+          </div>
           <div class="product__tabs__content__block product__reviews">Отзывы</div>
         </div>
       </div>
